--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Iranian National Code</string>
+    <string name="app_name">National Code</string>
+    <string name="validate_national_code">اعتبار سنجی کد ملی</string>
+    <string name="generate_national_code">تولید کد ملی</string>
+    <string name="sample_national_code">0 0 0 0 0 0 0 0 0 0</string>
+    <string name="sample_national_code_2">0000000000</string>
+    <string name="national_code_true">کد ملی درست است</string>
+    <string name="national_code_false">کد ملی غلط است</string>
+    <string name="national_code_length_is_wrong">طول کد ملی صحیح نمی باشد</string>
+    <string name="check">بررسی</string>
+
 </resources>
